--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "tsc && node dist/src/app.js && node dist/src/models/index",
     "dev": "nodemon --watch '**/*.ts' --exec 'ts-node' src/server.ts",
     "migrate": "ts-node src/models",
-    "test": "export NODE_ENV=test&&npm run migrate&&mocha -r ts-node/register 'src/test/*.ts'"
+    "test": "NODE_ENV=test jest --runInBand --testTimeout=40000 --forceExit",
+    "testd": "export NODE_ENV=test&&npm run migrate&&mocha -r ts-node/register 'src/test/*.ts'"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "repository": {
     "type": "git",
@@ -22,20 +26,35 @@
   "homepage": "https://github.com/danoseun/MPL#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "connect-redis": "^5.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.9"
+    "nodemon": "^2.0.9",
+    "moment": "^2.27.0",
+    "mongoose": "^5.9.21",
+    "redis": "^3.0.2",
+    "express-session": "^1.17.1"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^1.1.5",
     "@types/bcrypt": "^5.0.0",
+    "@types/connect-redis": "0.0.16",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
+    "@types/express-session": "^1.17.3",
+    "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^8.5.2",
     "@types/morgan": "^1.9.2",
     "@types/node": "^15.12.5",
     "@types/nodemon": "^1.19.0",
+    "@types/supertest": "^2.0.11",
+    "jest": "^27.0.6",
+    "supertest": "^4.0.2",
+    "ts-jest": "^27.0.0",
     "ts-node": "^10.0.0",
     "tslint": "^6.1.3",
     "typescript": "^4.3.4"
